  - $vc->register_constraint(...) is removed.
    You must use $vc->add_check(...) and $vc->add_filter(...).
  - $rule->require($key) and $rule->optional($key) are removed.
    You must use $rule->topic($key).
  - $vresult->is_ok is removed. You must use $vresult->is_valid.
  - $vresult->data is removed. You must use $vresult->output.
  - check function arguments is changed
    from ($value, $args, $vc) to ($rule, $key, $params, $args).
  - check function return value change. If the value is invalid, you must return 1.
    If the value is invalid, you must 0 or {message => "some error occur}.
  - filter function must return new parameters, for example, {title => $new_value}.
  - $rule->default(...) is removed. You must use $rule->fallback(...).
  
  - Many methods is removed.
      Validator::Custom
        error_stock
        js_fill_form_button
        data_filter
      Validator::Custom::Rule
        require
        optional
      Validator::Custom::Result
        is_ok
        data
        loose_data

  --- Why version up was needed? ---------------------
  - Constraint function is mixed with check function and filter function.
    It should be separated each feature.
  - 0.xx can't process not existing value properly.
  - 0.xx can't create output properly.
  - $rule->check(...) method can't receive function arguments properly.
  
0.28
  - improve decimal check. you can specify undef value which mean unlimit muximanu digits
    Example:
    Data: {num1 => '1233555.89345', num2 => '1121111.45', num3 => '12.555555555'}
    Rule: $rule->require('num1')->check('decimal')
      $rule->require('num2')->check({'decimal' => [undef, 2]})
      $rule->require('num2')->check({'decimal' => [2, undef]})
0.27
  - add to_array_remove_blank constraint.
0.26
  - add filter method, this is check method alias for readability
  - rename Validator::Custom::Rule array(this is added at 0.25) method to each
0.25
  - add string constraint. This is used to check the value is string.